[package]
name = "cloth_sim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
ggez = "0.6.0"
glam = { version = "0.15", features = ["mint"]} #must be same version as used by ggez
